--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -29,7 +29,8 @@ iso8601>=0.1.12
 jinja2_highlight>=0.6.1
 jinja2>=2.10.1
 lmdb>=1.1.1
-MarkupSafe>=1.1.1
+# ImportError: cannot import name 'soft_unicode' from 'markupsafe'
+MarkupSafe>=1.1.1,<2
 mistune>=0.8.4
 morphys>=1.0
 netaddr>=0.8.0
