--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,30 @@ jobs:
     - name: Run Bandit
       run: tox -c tox.ini -e bandit
 
-    # FIXME
-    # - name: Run Coverage
-    #  run: tox -c tox.ini -e coverage
+  analyze:
+    name: CodeQL analyze
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'python' ]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v1
+      with:
+        languages: ${{ matrix.language }}
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v1
 
   docs:
     # runs-on: ubuntu-20.04 # means github.com
@@ -90,9 +111,6 @@ jobs:
 
     env:
       CB_FULLTESTS: 1
-      CROSSBAR_FABRIC_URL: ws://localhost:9000/ws
-      CROSSBAR_FABRIC_SUPERUSER: ${{ github.workspace }}/.crossbar/default.pub
-      # CROSSBAR_FABRIC_SUPERUSER: ${{ env.GITHUB_WORKSPACE }}/.crossbar/default.pub
 
     # Test on specific CPython & PyPy versions
     strategy:
@@ -160,49 +178,13 @@ jobs:
       run: |
         ./test/test_ab_examples.sh
 
+    - name: Run command line tests (Crossbar.io CLI) 0
+      run: |
+        ./test/test_cli_0.sh
+
     - name: Run functional tests using direct node management APIs
       run: |
         pytest -sv --no-install ./test/functests/cbtests
-
-    - name: Run functional tests using master node management APIs
-      run: |
-        ./test/test_setup.sh
-        pytest -sv --no-install ./test/functests/cfctests
-
-    # FIXME:
-
-    # - name: Run management API test client
-    #   run: |
-    #     ./test/management/run.sh
-
-    # - name: Run command line tests (Crossbar.io CLI) 0
-    #   run: |
-    #     ./test/test_cli_0.sh
-
-    # - name: Run command line tests (Crossbar.io CLI) 1
-    #   run: |
-    #     ./test/test_cli_1.sh
-
-    # - name: Run command line tests (Crossbar.io CLI) 2
-    #   run: |
-    #     ./test/test_cli_2.sh
-
-    # - name: Run command line tests (Crossbar.io CLI) 3
-    #   run: |
-    #     ./test/test_cli_3.sh
-
-    # - name: Run CLI-based cluster automation tests 1
-    #   run: |
-    #     cd ./test/test_automated && ./test_prepare_host.sh && ./test_setup1.sh && ./test_host1.sh 1
-
-    # - name: Run CLI-based cluster automation tests 2
-    #   run: |
-    #     cd ./test/test_automated && ./test_prepare_host.sh && ./test_setup2.sh && ./test_host2.sh 1
-
-    # - name: Run XBR CLI tests
-    #   run: |
-    #     cd ./test/test_xbr_network && ./test_xbr_network.sh 1
-
 
   # FIXME: https://github.com/crossbario/crossbar/issues/1842
   #
@@ -263,7 +245,3 @@ jobs:
   #   - name: Run integration tests (Autobahn|Python Client)
   #     run: |
   #       ./test/test_ab_examples.sh
-
-  #   - name: Run command line tests (Crossbar.io CLI)
-  #     run: |
-  #       ./test/test_cli.sh
