--- a/.github/workflows/test-management.yml
+++ b/.github/workflows/test-management.yml
@@ -1,4 +1,4 @@
-name: main
+name: test-management
 
 on:
   # Trigger this workflow when the "main" workflow has completed successfully
@@ -59,7 +59,6 @@ jobs:
         python -m pip install --upgrade pip setuptools
         pip install -r requirements-dev.txt
 
-    # pip install -r requirements-min.txt
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
         pip install -U -r requirements-latest.txt
@@ -77,30 +76,30 @@ jobs:
 
     # FIXME:
 
-    # - name: Run management API test client
+    # - name: Run management API test client (api-1)
     #   run: |
     #     ./test/management/run.sh
 
-    # - name: Run command line tests (Crossbar.io CLI) 1
+    # - name: Run command line tests (cli-1)
     #   run: |
     #     ./test/test_cli_1.sh
 
-    # - name: Run command line tests (Crossbar.io CLI) 2
+    # - name: Run command line tests (cli-2)
     #   run: |
     #     ./test/test_cli_2.sh
 
-    # - name: Run command line tests (Crossbar.io CLI) 3
+    # - name: Run command line tests (cli-3)
     #   run: |
     #     ./test/test_cli_3.sh
 
-    # - name: Run CLI-based cluster automation tests 1
+    # - name: Run CLI-based cluster automation tests 1 (automate-1)
     #   run: |
     #     cd ./test/test_automated && ./test_prepare_host.sh && ./test_setup1.sh && ./test_host1.sh 1
 
-    # - name: Run CLI-based cluster automation tests 2
+    # - name: Run CLI-based cluster automation tests 2 (automate-2)
     #   run: |
     #     cd ./test/test_automated && ./test_prepare_host.sh && ./test_setup2.sh && ./test_host2.sh 1
 
-    # - name: Run XBR CLI tests
+    # - name: Run XBR CLI tests (xbrnetwork-1)
     #   run: |
     #     cd ./test/test_xbr_network && ./test_xbr_network.sh 1
