--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -6,7 +6,7 @@ bitstring>=3.1.5
 cbor2>=5.2.0
 cfxdb>=22.3.1
 click>=7.0
-colorama>=0.4.4
+colorama>=0.4.3
 constantly>=15.1.0
 cookiecutter>=1.6.0
 cryptography>=2.6.1
@@ -29,7 +29,8 @@ iso8601>=0.1.12
 jinja2_highlight>=0.6.1
 jinja2>=2.10.1
 lmdb>=1.1.1
-MarkupSafe>=1.1.1
+# ImportError: cannot import name 'soft_unicode' from 'markupsafe'
+MarkupSafe>=1.1.1,<2
 mistune>=0.8.4
 morphys>=1.0
 netaddr>=0.8.0
@@ -74,7 +75,8 @@ validate-email>=1.3
 git+https://github.com/vmprof/vmprof-python.git#egg=vmprof
 watchdog>=0.8.3
 web3>=5.13.1
-werkzeug>=0.14.1
+# ImportError: cannot import name 'escape' from 'werkzeug.utils'
+werkzeug>=0.14.1,<2
 wsaccel>=0.6.2; platform_python_implementation=='CPython'
 xbr>=21.2.1
 zlmdb>=22.3.1
