--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -153,8 +153,8 @@ jobs:
     # pip install -r requirements-min.txt
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
-        pip install -U -r requirements-latest.txt
         pip install .
+        pip install -U --force-reinstall -r requirements-latest.txt
 
     - name: Display Crossbar.io version
       run: |
