--- a/tox.ini
+++ b/tox.ini
@@ -100,19 +100,14 @@ passenv =
     LIB
     HOME
 commands =
-    # Install development dependencies
-    pip install -r{toxinidir}/requirements-dev.txt
-
     # NOT NEEDED ANYMORE!
     #    Install pip v19.3.1 (yes, absolutely, we do not want the "new resolver" shit)
     #    curl -sSL -o get-pip.py https://bootstrap.pypa.io/get-pip.py
     #    python get-pip.py "pip<20"
     pip show pip
 
-    # Install package dependencies
-    # pip install -r{toxinidir}/requirements-pinned.txt
-    pip install -r{toxinidir}/requirements-latest.txt
-    # pip install -r{toxinidir}/requirements-min.txt
+    # Install development dependencies
+    pip install -r {toxinidir}/requirements-dev.txt
 
     # inject build ID into source code: modifies CROSSBAR/_version.py!
     echo "Building with CROSSBAR_BUILD_ID={env:CROSSBAR_BUILD_ID}"
@@ -121,11 +116,17 @@ commands =
     # Install the package itself
     pip install .
 
+    # Install package dependencies
+    pip install -U --force-reinstall -r {toxinidir}/requirements-latest.txt
+
     # print effective version/build
     python -c "from crossbar._version import __version__, __build__; print('crossbar==', __version__, __build__)"
 
     # check basic personality import
     python -c "import txaio; txaio.use_twisted(); from crossbar import edge, master"
+
+    # check full version output
+    crossbar version
 
     # generate default profile
     echo "Testing with CROSSBAR_FABRIC_URL={env:CROSSBAR_FABRIC_URL}, CROSSBAR_FABRIC_SUPERUSER={env:CROSSBAR_FABRIC_SUPERUSER}"
