--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,8 +98,9 @@ jobs:
 
     - name: Install Python package dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
+        pip install .
+        pip install -U --force-reinstall -r requirements-latest.txt
 
     - name: Run Sphinx
       run: tox -c tox.ini -e sphinx
