--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -6,7 +6,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.2.2
 async-timeout==4.0.2
 attrs==21.4.0
-autobahn==22.4.1
+autobahn==22.5.1
 Automat==20.2.0
 base58==2.1.1
 bcrypt==3.2.2
@@ -15,7 +15,7 @@ bitarray==1.2.2
 bitstring==3.1.9
 cached-property==1.5.2
 cbor2==5.4.3
-certifi==2021.10.8
+certifi==2022.5.18.1
 cffi==1.15.0
 cfxdb==22.4.1
 chardet==4.0.0
@@ -23,7 +23,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
 constantly==15.1.0
-cookiecutter==1.7.3
+cookiecutter==2.1.1
 cryptography==37.0.2
 cytoolz==0.11.2
 docker==5.0.3
@@ -56,7 +56,7 @@ itsdangerous==2.1.2
 Jinja2==2.11.3
 jinja2-highlight==0.6.1
 jinja2-time==0.2.0
-jsonschema==4.4.0
+jsonschema==4.6.0
 lmdb==1.3.0
 lru-dict==1.1.7
 MarkupSafe==1.1.1
@@ -68,15 +68,14 @@ multiaddr==0.0.9
 multidict==6.0.2
 mypy-extensions==0.4.3
 netaddr==0.8.0
-numpy==1.22.3
+numpy==1.22.4
 packaging==21.3
 parsimonious==0.8.1
 passlib==1.7.4
-poyo==0.5.0
 priority==1.3.0
 prompt-toolkit==3.0.29
 protobuf==3.20.1
-psutil==5.9.0
+psutil==5.9.1
 PTable==0.9.2
 py-cid @ git+https://github.com/crossbario/py-cid.git@e1dc52a43ced53845679405f78d92fb18f093653
 py-ecc==5.2.0
@@ -92,7 +91,7 @@ pycryptodome==3.14.1
 Pygments==2.12.0
 PyNaCl==1.5.0
 pyOpenSSL==22.0.0
-pyparsing==3.0.8
+pyparsing==3.0.9
 PyQRCode==1.2.1
 pyrsistent==0.18.1
 python-baseconv==1.2.2
@@ -102,12 +101,13 @@ python-snappy==0.6.1
 PyTrie==0.4.0
 pytz==2022.1
 PyYAML==6.0
+qrcode==7.3.1
 requests==2.27.1
 rlp==2.0.1
 sdnotify==0.3.2
 service-identity==21.1.0
 setproctitle==1.2.3
-setuptools==62.0.0
+setuptools==62.1.0
 six==1.16.0
 sortedcontainers==2.4.0
 spake2==0.8
@@ -121,14 +121,14 @@ txaio==22.2.1
 txtorcon==22.0.0
 typing_extensions==4.2.0
 u-msgpack-python==2.7.1
-ujson==5.2.0
+ujson==5.3.0
 urllib3==1.26.9
 validate-email==1.3
 varint==1.0.2
-vmprof @ git+https://github.com/vmprof/vmprof-python.git@45a03f45b31a09dba99f77884f88318cc64db899
-watchdog==2.1.7
+vmprof @ git+https://github.com/vmprof/vmprof-python.git@0549883090c5537ea1acabb27ff065a3c7d7a45a
+watchdog==2.1.8
 wcwidth==0.2.5
-web3==5.29.0
+web3==5.29.2
 websocket-client==1.3.2
 websockets==9.1
 Werkzeug==1.0.1
