--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -1,5 +1,5 @@
 attrs>=17.2.0
-autobahn[twisted,encryption,compress,serialization,scram,xbr]>=22.6.1
+autobahn[twisted,encryption,compress,serialization,scram,xbr]>=22.7.1
 base58>=2.1.0
 bcrypt>=3.1.6
 bitstring>=3.1.5
@@ -17,12 +17,12 @@ flask>=1.1.1
 git+https://github.com/crossbario/py-cid.git@remove-dep-upper-limits#egg=py-cid
 git+https://github.com/crossbario/py-multihash.git@remove-dep-version-limits#egg=py-multihash
 # twisted/http2 needs <4:
-h2>=3.2,<4.0
+h2>=3.2.0,<4.0.0
 hexbytes>=0.2.1
 humanize>=0.5.1
-# twisted/http2 needs <6:
-hyperframe>=5.2,<6.0
-idna>=2.5
+# twisted/http2 needs <6.0.0:
+hyperframe>=5.2.0,<6.0.0
+idna<2.6,>=2.5
 importlib-resources>=4.1.1
 incremental>=17.5.0
 iso8601>=0.1.12
@@ -38,7 +38,7 @@ numpy>=1.20.0
 parsimonious>=0.8.1
 passlib>=1.7.1
 # twisted/http2 needs <2:
-priority>=1.1,<2.0
+priority>=1.3.0,<2.0
 prompt-toolkit>=2.0.10
 psutil>=5.8.0
 py-eth-sig-utils>=0.4.0
@@ -60,19 +60,19 @@ setuptools>=36.2.7
 six>=1.13.0
 sortedcontainers>=2.4.0
 stringcase>=1.2.0
-tabulate>=0.7.7
-treq>=20.4.1
-twisted[tls,conch,http2,osx_platform]>=21.7.0; sys_platform == 'darwin'
-twisted[tls,conch,http2,windows_platform]>=21.7.0; sys_platform == 'win32'
-twisted[tls,conch,http2]>=21.7.0; sys_platform != 'darwin' and sys_platform != 'win32'
+tabulate>=0.8.9
+treq>=22.2.0
+twisted[tls,conch,http2,osx_platform]>=22.2.0; sys_platform == 'darwin'
+twisted[tls,conch,http2,windows_platform]>=22.2.0; sys_platform == 'win32'
+twisted[tls,conch,http2]>=22.2.0; sys_platform != 'darwin' and sys_platform != 'win32'
 txaio>=22.2.1
-txtorcon>=20.0.0
-u-msgpack-python>=2.4.1
-ujson>=5.1.0
-urllib3>=1.26.8
+txtorcon>=22.0.0
+u-msgpack-python>=2.7.1
+ujson>=5.3.0
+urllib3>=1.21.1,<1.27
 validate-email>=1.3
-watchdog>=0.8.3
-web3>=5.13.1
+watchdog>=2.1.8
+web3>=5.29.2
 # ImportError: cannot import name 'escape' from 'werkzeug.utils'
 werkzeug>=0.14.1,<2
 wsaccel>=0.6.2; platform_python_implementation=='CPython'
