--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,6 +99,7 @@ jobs:
     - name: Install Python package dependencies
       run: |
         pip install -r requirements-dev.txt
+        pip install -U pip setuptools
         pip install .
         pip install -U --force-reinstall -r requirements-latest.txt
 
@@ -148,12 +149,8 @@ jobs:
 
     - name: Install Python package dependencies
       run: |
-        python -m pip install --upgrade pip setuptools
         pip install -r requirements-dev.txt
-
-    # pip install -r requirements-min.txt
-    - name: Install Crossbar.io package dependencies & Crossbar.io
-      run: |
+        pip install -U pip setuptools
         pip install .
         pip install -U --force-reinstall -r requirements-latest.txt
 
@@ -198,13 +195,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Python package dependencies
-      run: |
-        python -m pip install --upgrade pip setuptools
-        pip install -r requirements-dev.txt
-
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
+        pip install -r requirements-dev.txt
+        pip install -U pip setuptools
         pip install .
         pip install -U --force-reinstall -r requirements-latest.txt
 
