--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,6 +100,9 @@ jobs:
       run: |
         pip install -r requirements-dev.txt
         pip install -U pip setuptools
+
+    - name: Install Crossbar.io packages
+      run: |
         pip install .
         pip install -U --force-reinstall -r requirements-latest.txt
 
@@ -151,6 +154,9 @@ jobs:
       run: |
         pip install -r requirements-dev.txt
         pip install -U pip setuptools
+
+    - name: Install Crossbar.io packages
+      run: |
         pip install .
         pip install -U --force-reinstall -r requirements-latest.txt
 
@@ -195,10 +201,13 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Crossbar.io package dependencies & Crossbar.io
+    - name: Install Python package dependencies
       run: |
         pip install -r requirements-dev.txt
         pip install -U pip setuptools
+
+    - name: Install Crossbar.io packages
+      run: |
         pip install .
         pip install -U --force-reinstall -r requirements-latest.txt
 
