--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,8 +99,12 @@ jobs:
     - name: Install Python package dependencies
       run: |
         pip install -r requirements-dev.txt
+        pip install -U pip setuptools
+
+    # pip install -U --force-reinstall -r requirements-latest.txt
+    - name: Install Crossbar.io packages
+      run: |
         pip install .
-        pip install -U --force-reinstall -r requirements-latest.txt
 
     - name: Run Sphinx
       run: tox -c tox.ini -e sphinx
@@ -148,14 +152,13 @@ jobs:
 
     - name: Install Python package dependencies
       run: |
-        python -m pip install --upgrade pip setuptools
         pip install -r requirements-dev.txt
+        pip install -U pip setuptools
 
-    # pip install -r requirements-min.txt
-    - name: Install Crossbar.io package dependencies & Crossbar.io
+    # pip install -U --force-reinstall -r requirements-latest.txt
+    - name: Install Crossbar.io packages
       run: |
         pip install .
-        pip install -U --force-reinstall -r requirements-latest.txt
 
     - name: Display Crossbar.io version
       run: |
@@ -200,13 +203,13 @@ jobs:
 
     - name: Install Python package dependencies
       run: |
-        python -m pip install --upgrade pip setuptools
         pip install -r requirements-dev.txt
+        pip install -U pip setuptools
 
-    - name: Install Crossbar.io package dependencies & Crossbar.io
+    # pip install -U --force-reinstall -r requirements-latest.txt
+    - name: Install Crossbar.io packages
       run: |
         pip install .
-        pip install -U --force-reinstall -r requirements-latest.txt
 
     - name: Display Crossbar.io version
       run: |
