fix more maintenance glitches

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 python_version = 3.7
+disable_error_code = annotation-unchecked
 
 [mypy-crossbar.worker.test.examples.*]
 ignore_errors = True
