--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ description =
     Common environment.
 # yes, we do want to skip the installation of the package, because we do that ourself
 skip_install = True
-whitelist_externals =
+allowlist_externals =
     sh
     ldd
     du
@@ -167,6 +167,8 @@ commands =
 description =
     Generate docs using Sphinx.
 skip_install = True
+allowlist_externals =
+    sphinx-build
 commands =
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
