--- a/tox.ini
+++ b/tox.ini
@@ -174,14 +174,10 @@ commands =
     sphinx-build -nWT -b dummy ./docs ./docs/_build
 
     # run spell checker
-    sphinx-build -b spelling -d ./docs/_build/doctrees ./docs ./docs/_build/spelling
+    sphinx-build -b spelling -q -d ./docs/_build/doctrees ./docs ./docs/_build/spelling
 
     # generate HTML output
     sphinx-build -b dirhtml ./docs ./docs/_build
-
-    # move to HOME to preserve in deploy for upload to S3
-    -rm -rf {homedir}/crossbar-docs
-    cp -R ./docs/_build {homedir}/crossbar-docs
 
 
 [testenv:bandit]
