--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,11 @@
 # docs
 sphinx>=6.1.3
 sphinxcontrib-images>=0.9.4
-sphinx-rtd-theme>=1.0.0
+
+# FIX conflict:
+# sphinx 6.1.3 depends on docutils<0.20 and >=0.18, sphinx-rtd-theme 1.0.0 depends on docutils<0.18
+# sphinx-rtd-theme>=1.0.0
+
 sphinxcontrib-spelling>=7.3.2
 pygments>=2.11.2
 pyenchant>=3.2.2
@@ -52,4 +56,7 @@ hashin
 
 pyinstaller==4.2
 docker-compose>=1.29.0
-awscli>=1.19.84
+
+# FIX conflict:
+# tox 4.2.8 depends on colorama>=0.4.6, awscli 1.27.50 depends on colorama<0.4.5 and >=0.2.5
+# awscli>=1.27.50
