--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -1,82 +1,82 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
+aiohttp==3.8.3
+aiosignal==1.3.1
 appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-arrow==1.2.2
+arrow==1.2.3
 async-timeout==4.0.2
-attrs==22.1.0
-autobahn==22.7.1
-Automat==20.2.0
+attrs==22.2.0
+autobahn==22.12.1
+Automat==22.10.0
 base58==2.1.1
-bcrypt==3.2.2
+bcrypt==4.0.1
 binaryornot==0.4.4
-bitarray==2.6.0
-bitstring==3.1.9
+bitarray==2.6.2
+bitstring==4.0.1
 cached-property==1.5.2
-cbor2==5.4.3
-certifi==2022.6.15
+cbor2==5.4.6
+certifi==2022.12.7
 cffi==1.15.1
 cfxdb==22.6.1
-chardet==5.0.0
-charset-normalizer==2.1.0
+chardet==5.1.0
+charset-normalizer==2.1.1
 click==8.1.3
-colorama==0.4.5
+colorama==0.4.6
 constantly==15.1.0
 cookiecutter==2.1.1
-cryptography==37.0.4
-cytoolz==0.12.0
-docker==5.0.3
+cryptography==39.0.0
+cytoolz==0.12.1
+docker==6.0.1
 ecdsa==0.18.0
 eth-abi==2.2.0
-eth-account==0.5.8
-eth-hash==0.5.0
+eth-account==0.5.9
+eth-hash==0.3.3
 eth-keyfile==0.5.1
 eth-keys==0.3.4
 eth-rlp==0.2.1
 eth-typing==2.3.0
-eth-utils==1.9.5
+eth-utils==1.10.0
 Flask==1.1.2
-flatbuffers==2.0
-frozenlist==1.3.0
+flatbuffers==23.1.4
+frozenlist==1.3.3
 h2==3.2.0
 hashin==0.17.0
-hexbytes==0.2.2
+hexbytes==0.3.0
 hkdf==0.0.3
 hpack==3.0.0
-humanize==4.2.3
+humanize==4.4.0
 hyperframe==5.2.0
 hyperlink==21.0.0
 idna==2.5
-importlib-resources==5.9.0
-incremental==21.3.0
+importlib-resources==5.10.2
+incremental==22.10.0
 ipfshttpclient==0.8.0a2
-iso8601==1.0.2
+iso8601==1.1.0
 itsdangerous==2.1.2
-Jinja2==2.11.3
+Jinja2==3.1.2
 jinja2-highlight==0.6.1
 jinja2-time==0.2.0
-jsonschema==4.9.0
-lmdb==1.3.0
+jsonschema==4.17.3
+lmdb==1.4.0
 lru-dict==1.1.8
-MarkupSafe==1.1.1
+MarkupSafe==2.1.1
 mistune==2.0.4
 mnemonic==0.20
 morphys==1.0
 msgpack==1.0.4
 multiaddr==0.0.9
-multidict==6.0.2
+multidict==6.0.4
 mypy-extensions==0.4.3
 netaddr==0.8.0
-numpy==1.23.1
-packaging==21.3
+numpy==1.24.1
+packaging==23.0
 parsimonious==0.8.1
 passlib==1.7.4
+prettytable==3.6.0
 priority==1.3.0
-prompt-toolkit==3.0.30
-protobuf==3.20.1
-psutil==5.9.1
-PTable==0.9.2
+prompt-toolkit==3.0.36
+protobuf==3.19.5
+psutil==5.9.4
 py-cid @ git+https://github.com/crossbario/py-cid.git@e1dc52a43ced53845679405f78d92fb18f093653
 py-ecc==5.2.0
 py-eth-sig-utils==0.4.0
@@ -87,53 +87,52 @@ py-ubjson==0.16.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
-pycryptodome==3.15.0
-Pygments==2.12.0
+pycryptodome==3.16.0
+Pygments==2.14.0
 PyNaCl==1.5.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
+pyOpenSSL==23.0.0
 PyQRCode==1.2.1
-pyrsistent==0.18.1
+pyrsistent==0.19.3
 python-baseconv==1.2.2
 python-dateutil==2.8.2
-python-slugify==6.1.2
+python-slugify==7.0.0
 python-snappy==0.6.1
 PyTrie==0.4.0
 PyYAML==6.0
 qrcode==7.3.1
-requests==2.28.1
+requests==2.28.2
 rlp==2.0.1
 sdnotify==0.3.2
 service-identity==21.1.0
-setproctitle==1.3.0
-setuptools==63.1.0
+setproctitle==1.3.2
+setuptools==64.0.0
 six==1.16.0
 sortedcontainers==2.4.0
 spake2==0.8
 stringcase==1.2.0
-tabulate==0.8.10
+tabulate==0.9.0
 text-unidecode==1.3
 toolz==0.12.0
 treq==22.2.0
-Twisted==22.4.0
+Twisted==22.10.0
 txaio==22.2.1
 txtorcon==22.0.0
-typing_extensions==4.3.0
-u-msgpack-python==2.7.1
-ujson==5.4.0
-urllib3==1.26.11
+typing_extensions==4.4.0
+u-msgpack-python==2.7.2
+ujson==5.7.0
+urllib3==1.26.14
 validate-email==1.3
 varint==1.0.2
-watchdog==2.1.9
-wcwidth==0.2.5
-web3==5.30.0
-websocket-client==1.3.3
+watchdog==2.2.1
+wcwidth==0.2.6
+web3==5.31.3
+websocket-client==1.4.2
 websockets==9.1
 Werkzeug==1.0.1
-wsaccel==0.6.3
+wsaccel==0.6.4
 xbr==21.2.1
 yapf==0.29.0
-yarl==1.8.1
-zipp==3.8.1
+yarl==1.8.2
+zipp==3.11.0
 zlmdb==22.6.1
-zope.interface==5.4.0
+zope.interface==5.5.2
