--- a/tox.ini
+++ b/tox.ini
@@ -7,18 +7,18 @@ envlist =
     yapf
     bandit
     pytest
-    {py37,py39,py310,pypy38}-{pinned,unpinned,abtrunk}-trial
-    {py37,py39,py310,pypy38}-examples
+    {py311,pypy39}-{pinned,unpinned,abtrunk}-trial
+    {py311,pypy39}-examples
     functests-cb
     functests-cfc
-    {py39,pypy38}-api-1
-    {py39,pypy38}-cli-0
-    {py39,pypy38}-cli-1
-    {py39,pypy38}-cli-2
-    {py39,pypy38}-cli-3
-    {py39,pypy38}-automate-1
-    {py39,pypy38}-automate-2
-    {py39,pypy38}-xbrnetwork-1
+    {py311,pypy39}-api-1
+    {py311,pypy39}-cli-0
+    {py311,pypy39}-cli-1
+    {py311,pypy39}-cli-2
+    {py311,pypy39}-cli-3
+    {py311,pypy39}-automate-1
+    {py311,pypy39}-automate-2
+    {py311,pypy39}-xbrnetwork-1
 
 
 # MAP: GitHub Actions Python Name => Tox Env Name (for Python)
@@ -30,12 +30,8 @@ envlist =
 #
 [gh-actions]
 python =
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10: py310
-    pypy-3.7: pypy37
-    pypy-3.8: pypy38
+    3.11: py311
+    pypy-3.9: pypy39
 
 
 [testenv]
@@ -169,7 +165,10 @@ description =
 skip_install = True
 allowlist_externals =
     sphinx-build
+    git+https://github.com/erikrose/parsimonious.git
 commands =
+    pip install -U git+https://github.com/erikrose/parsimonious.git
+
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
 
@@ -262,4 +261,4 @@ commands =
 setenv =
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     COVERAGE_FILE = {toxinidir}/.coverage
-    {py39,pypy37}: CB_FULLTESTS = 1
+    {py311,pypy39}: CB_FULLTESTS = 1
