--- a/tox.ini
+++ b/tox.ini
@@ -115,6 +115,12 @@ commands =
     # Install package dependencies
     pip install -U --force-reinstall -r {toxinidir}/requirements-latest.txt
 
+    # FIXME:
+    # File "/home/oberstet/scm/crossbario/crossbar/.tox/pytest/lib/python3.11/site-packages/parsimonious/expressions.py", line 9, in <module>
+    # from inspect import getargspec
+    pip install -U git+https://github.com/erikrose/parsimonious.git
+    python -c "from eth_abi import abi"
+
     # print effective version/build
     python -c "from crossbar._version import __version__, __build__; print('crossbar==', __version__, __build__)"
 
@@ -165,10 +171,7 @@ description =
 skip_install = True
 allowlist_externals =
     sphinx-build
-    git+https://github.com/erikrose/parsimonious.git
 commands =
-    pip install -U git+https://github.com/erikrose/parsimonious.git
-
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
 
