--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -36,7 +36,8 @@ mistune>=0.8.4
 morphys>=1.0
 netaddr>=0.8.0
 numpy>=1.20.0
-parsimonious>=0.8.1
+# fixes: "ImportError: cannot import name 'getargspec' from 'inspect'" on Python 3.10+
+parsimonious>=0.10.0
 passlib>=1.7.1
 # twisted/http2 needs <2:
 priority>=1.3.0,<2.0
