--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -1,85 +1,86 @@
 attrs>=22.2.0
 autobahn[twisted,encryption,compress,serialization,scram,xbr]>=23.1.1
-base58>=2.1.0
-bcrypt>=3.1.6
-bitstring>=3.1.5
-cbor2>=5.2.0
+base58>=2.1.1
+bcrypt>=4.0.1
+bitstring>=4.0.1
+cbor2>=5.4.6
 cfxdb>=22.6.1
-click>=7.0
-colorama>=0.4.3
+click>=8.1.3
+colorama>=0.4.6
 constantly>=15.1.0
-cookiecutter>=1.6.0
-cryptography>=2.6.1
-docker>=3.5.0
+cookiecutter>=2.1.1
+cryptography>=39.0.0
+docker>=6.0.1
 # required for python 3.11+ https://github.com/ethereum/eth-abi/pull/194
 git+https://github.com/ethereum/eth-abi.git@master#v4.0.0
 # required for python 3.11+ (https://github.com/ethereum/eth-account/pull/212)
 git+https://github.com/ethereum/eth-account.git#v0.8.0
 git+https://github.com/ethereum/eth-typing.git#v3.2.0
-flask>=2.2.1
+flask>=2.2.2
 git+https://github.com/crossbario/py-cid.git@remove-dep-upper-limits#egg=py-cid
 git+https://github.com/crossbario/py-multihash.git@remove-dep-version-limits#egg=py-multihash
-# twisted/http2 needs <4:
+# FIXME: twisted/http2 needs <4 => h2>=4.1.0
 h2>=3.2.0,<4.0.0
-hexbytes>=0.2.1
-humanize>=0.5.1
-# twisted/http2 needs <6.0.0:
+hexbytes>=0.3.0
+humanize>=4.4.0
+# FIXME: twisted/http2 needs <6.0.0 => hyperframe>=6.0.1
 hyperframe>=5.2.0,<6.0.0
+# FIXME: idna>=3.4
 idna<2.6,>=2.5
-importlib-resources>=4.1.1
-incremental>=17.5.0
-iso8601>=0.1.12
-jinja2_highlight>=0.6.1
+importlib-resources>=5.10.2
+incremental>=22.10.0
+iso8601>=1.1.0
+jinja2-highlight>=0.6.1
 jinja2>=3.1.2
-lmdb>=1.1.1
-MarkupSafe>=2.1.1
-mistune>=0.8.4
+lmdb>=1.4.0
+MarkupSafe>=2.1.2
+mistune>=2.0.4
 morphys>=1.0
 netaddr>=0.8.0
-numpy>=1.20.0
+numpy>=1.24.1
 # python 3.10+ requires >=0.9.0 ("ImportError: cannot import name 'getargspec' from 'inspect'")
-# eth-abi requires <0.10.0 (https://github.com/ethereum/eth-abi/pull/194)
+# FIXME: eth-abi requires <0.10.0 (https://github.com/ethereum/eth-abi/pull/194)
 parsimonious>=0.9.0,<0.10.0
-passlib>=1.7.1
-# twisted/http2 needs <2:
+passlib>=1.7.4
+# FIXME: twisted/http2 needs <2 => priority>=2.0.0
 priority>=1.3.0,<2.0
-prompt-toolkit>=2.0.10
+prompt-toolkit>=3.0.36
 psutil>=5.9.4
 py-eth-sig-utils>=0.4.0
-py-ubjson>=0.9.0
-pyasn1-modules>=0.2.4
-pyasn1>=0.4.5
-pycryptodome>=3.7.1
-pygments>=2.2.0
-pynacl>=1.1.2
-pyopenssl>=17.1.0
+py-ubjson>=0.16.1
+pyasn1-modules>=0.2.8
+pyasn1>=0.4.8
+pycryptodome>=3.16.0
+pygments>=2.14.0
+pynacl>=1.5.0
+pyopenssl>=23.0.0
 pyqrcode>=1.2.1
-pytrie>=0.3
-pyyaml>=4.2b4
-requests>=2.20.0
-sdnotify>=0.3.1
-service_identity>=17.0.0
-setproctitle>=1.1.10
-setuptools>=36.2.7
-six>=1.13.0
+pytrie>=0.4.0
+pyyaml>=6.0
+requests>=2.28.2
+sdnotify>=0.3.2
+service-identity>=21.1.0
+setproctitle>=1.3.2
+setuptools>=66.0.0
+six>=1.16.0
 sortedcontainers>=2.4.0
 stringcase>=1.2.0
-tabulate>=0.8.9
+tabulate>=0.9.0
 treq>=22.2.0
 twisted[tls,conch,http2,osx_platform]>=22.10.0; sys_platform == 'darwin'
 twisted[tls,conch,http2,windows_platform]>=22.10.0; sys_platform == 'win32'
 twisted[tls,conch,http2]>=22.10.0; sys_platform != 'darwin' and sys_platform != 'win32'
 txaio>=23.1.1
 txtorcon>=22.0.0
-u-msgpack-python>=2.7.1
-ujson>=5.3.0
-urllib3>=1.21.1,<1.27
+u-msgpack-python>=2.7.2
+ujson>=5.7.0
+urllib3>=1.26.14,<1.27
 validate-email>=1.3
-watchdog>=2.1.8
+watchdog>=2.2.1
 # web3 5.31.3 depends on eth-abi<3.0.0 and >=2.2.0
 git+https://github.com/ethereum/web3.py.git#v6.0.0-beta.9
-werkzeug>=2.2.0
-wsaccel>=0.6.2; platform_python_implementation=='CPython'
+werkzeug>=2.2.2
+wsaccel>=0.6.4; platform_python_implementation=='CPython'
 xbr>=21.2.1
 zlmdb>=22.6.1
-zope.interface>=4.4.2
+zope.interface>=5.5.2
