--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -32,6 +32,7 @@ incremental>=22.10.0
 iso8601>=1.1.0
 jinja2-highlight>=0.6.1
 jinja2>=3.1.2
+jsonschema>=4.0.0
 lmdb>=1.4.0
 MarkupSafe>=2.1.2
 mistune>=2.0.4
