--- a/tox.ini
+++ b/tox.ini
@@ -87,7 +87,7 @@ setenv =
     MAILGUN_KEY                 = "key-00000000000000000000000000000000"
     MAILGUN_URL                 = "https://api.mailgun.net/v3/mailing.crossbar.io/messages"
     CROSSBAR_FABRIC_URL         = {env:CROSSBAR_FABRIC_URL:ws://localhost:9000/ws}
-    CROSSBAR_FABRIC_SUPERUSER   = {homedir}/.crossbar/default.pub
+    CROSSBAR_FABRIC_SUPERUSER   = .crossbar/default.pub
 passenv =
     # https://packaging.python.org/guides/supporting-windows-using-appveyor/#testing-with-tox
     DISTUTILS_USE_SDK
@@ -96,11 +96,13 @@ passenv =
     LIB
     HOME
 commands =
-    # NOT NEEDED ANYMORE!
-    #    Install pip v19.3.1 (yes, absolutely, we do not want the "new resolver" shit)
-    #    curl -sSL -o get-pip.py https://bootstrap.pypa.io/get-pip.py
-    #    python get-pip.py "pip<20"
     pip show pip
+
+    # Install package dependencies
+    pip install -r {toxinidir}/requirements-latest.txt
+
+    # Install the package itself
+    pip install .
 
     # Install development dependencies
     pip install -r {toxinidir}/requirements-dev.txt
@@ -108,18 +110,6 @@ commands =
     # inject build ID into source code: modifies CROSSBAR/_version.py!
     echo "Building with CROSSBAR_BUILD_ID={env:CROSSBAR_BUILD_ID}"
     python inject-build-id.py
-
-    # Install the package itself
-    pip install .
-
-    # Install package dependencies
-    pip install -U --force-reinstall -r {toxinidir}/requirements-latest.txt
-
-    # FIXME:
-    # File "/home/oberstet/scm/crossbario/crossbar/.tox/pytest/lib/python3.11/site-packages/parsimonious/expressions.py", line 9, in <module>
-    # from inspect import getargspec
-    pip install -U git+https://github.com/erikrose/parsimonious.git
-    python -c "from eth_abi import abi"
 
     # print effective version/build
     python -c "from crossbar._version import __version__, __build__; print('crossbar==', __version__, __build__)"
