--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -59,7 +59,10 @@ twine
 hashin
 
 pyinstaller==4.2
-docker-compose>=1.29.0
+
+# FIXME: the docker shit insists on old deps (yaml, jsonschema)
+# https://github.com/docker/compose/blob/30fcb72cf3b136598883752edfa6ea4f3b8643d4/setup.py#L27
+# docker-compose>=1.29.0
 
 # FIX conflict:
 # tox 4.2.8 depends on colorama>=0.4.6, awscli 1.27.50 depends on colorama<0.4.5 and >=0.2.5
