--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,19 @@ allowlist_externals =
     which
     sphinx-build
     coverage
+    test_ab_examples.sh
+    test_setup.sh
+    test_cli_0.sh
+    test_cli_1.sh
+    test_cli_2.sh
+    test_cli_3.sh
+    run.sh
+    test_host1.sh
+    test_host2.sh
+    test_prepare_host.sh
+    test_setup1.sh
+    test_setup2.sh
+    test_xbr_network.sh
 setenv =
     PYTHONPATH                  = {toxinidir}
     CB_FULLTESTS                = {env:CB_FULLTESTS:1}
@@ -98,14 +111,14 @@ passenv =
 commands =
     pip show pip
 
+    # Install development dependencies
+    pip install -r {toxinidir}/requirements-dev.txt
+
     # Install package dependencies
-    pip install -r {toxinidir}/requirements-latest.txt
+    pip install -U --force-reinstall -r {toxinidir}/requirements-latest.txt
 
     # Install the package itself
     pip install .
-
-    # Install development dependencies
-    pip install -r {toxinidir}/requirements-dev.txt
 
     # inject build ID into source code: modifies CROSSBAR/_version.py!
     echo "Building with CROSSBAR_BUILD_ID={env:CROSSBAR_BUILD_ID}"
